src-java/testing/functional-tests/src/main/groovy/org/openkilda/functionaltests/error/flowmirror/FlowMirrorPointNotCreatedExpectedError.groovy
package org.openkilda.functionaltests.error.flowmirror

import org.openkilda.functionaltests.error.AbstractExpectedError
import org.springframework.http.HttpStatus

import java.util.regex.Pattern

class FlowMirrorPointNotCreatedExpectedError extends AbstractExpectedError{
    final static HttpStatus statusCode = HttpStatus.BAD_REQUEST
    final static String message = "Could not create flow mirror point"

    FlowMirrorPointNotCreatedExpectedError(Pattern descriptionPattern) {
        super(statusCode, message, descriptionPattern)
    }
}
